@@ -1114,6 +1114,10 @@ name|GimpContext
 modifier|*
 name|context
 decl_stmt|;
+name|GtkWidget
+modifier|*
+name|combo
+decl_stmt|;
 name|item
 operator|=
 name|g_object_get_data
@@ -1138,6 +1142,19 @@ argument_list|,
 literal|"gimp-stroke-options"
 argument_list|)
 expr_stmt|;
+name|combo
+operator|=
+name|g_object_get_data
+argument_list|(
+name|G_OBJECT
+argument_list|(
+name|dialog
+argument_list|)
+argument_list|,
+literal|"gimp-tool-menu"
+argument_list|)
+expr_stmt|;
+empty_stmt|;
 name|image
 operator|=
 name|gimp_item_get_image
@@ -1172,21 +1189,6 @@ argument_list|(
 name|context
 argument_list|)
 decl_stmt|;
-name|GtkWidget
-modifier|*
-name|combo
-init|=
-name|g_object_get_data
-argument_list|(
-name|G_OBJECT
-argument_list|(
-name|dialog
-argument_list|)
-argument_list|,
-literal|"gimp-tool-menu"
-argument_list|)
-decl_stmt|;
-empty_stmt|;
 name|gimp_config_reset
 argument_list|(
 name|GIMP_CONFIG
@@ -1396,6 +1398,18 @@ expr_stmt|;
 block|}
 comment|/* fallthrough */
 default|default:
+name|g_signal_handlers_disconnect_by_func
+argument_list|(
+name|combo
+argument_list|,
+name|G_CALLBACK
+argument_list|(
+name|stroke_dialog_paint_info_selected
+argument_list|)
+argument_list|,
+name|options
+argument_list|)
+expr_stmt|;
 name|gtk_widget_destroy
 argument_list|(
 name|dialog
